# wechat-editor-bot

./: .gitignore  LICENSE  README.md  finance_news_bot.py  pyproject.toml  test_templates.py  wechat_editor_bot.py
.claude/plans/: replicated-dazzling-flute.md
.github/workflows/: daily-news.yml  test-news-bot.yml
config/: article_templates.yaml  finance_news_config.yaml  secrets.yaml.example  wechat_bot_config.yaml
config/templates/: financial_report.yaml  general_news.yaml  knowledge_explanation.yaml  news_flash.yaml  tech_news.yaml
docs/: CACHE_GUIDE.md  CONFIG_GUIDE.md  EXA_MIGRATION.md  INSTALL.md  STYLE_GUIDE.md  article_templates_usage.md  refactoring_summary.md
modules/: __init__.py  article_generator.py  cache_manager.py  exa_news_gatherer.py  file_manager.py  image_generator.py  markdown_converter.py  news_gatherer.py  weather_service.py  wechat_publisher.py
modules/bot/: __init__.py  commands.py  config.py  mock_data.py  pipeline.py
modules/cli/: __init__.py  dispatcher.py  parser.py
output/: .exa_cache.json
output/test/: test-article-20260303.html  test-article-20260303.md  test-article-20260304.html  test-article-20260304.md
templates/mock/: financial_report.md  general_news.md  knowledge_explanation.md  tech_news.md
tests/: README.md  test_article_generation.py  test_structure.py
tests/output/test/: test-article-20260304.html  test-article-20260304.md  test-article-20260305.html  test-article-20260305.md
