[project]
name = "wechat-editor-bot"
version = "2.0.0"
description = "微信公众号发布系统"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "buer"}
]

dependencies = [
    # Markdown 转换
    "markdown>=3.4.0",
    # 配置文件解析
    "pyyaml>=6.0",
    # HTTP 请求
    "requests>=2.31.0",
    # 图片处理
    "Pillow>=10.0.0",
    # AI 文章生成
    "anthropic>=0.18.0",
    "openai>=1.0.0",
    # CSS 内联化（微信公众号样式处理）
    "premailer>=3.10.0",
    # HTML 解析
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["modules"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
